--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ langgraph==0.0.20
 opencv-python==4.8.1.78
 Pillow==10.1.0
 ffmpeg-python==0.2.0
+numpy<2.0  # OpenCV compatibility
 
 # CLIP
 torch==2.2.0
