--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ google-generativeai==0.3.0
 google-genai==0.2.0  # For image/video generation (Nano Banana, Veo)
 
 # LangGraph
-langgraph==0.0.20
+langgraph>=0.2.0
 
 # Image/Video Processing
 opencv-python==4.8.1.78
